--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_progress_hud: ^2.0.2
   botton_nav_bar: ^1.0.2
   flutter_feather_icons: ^2.0.0+1
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
