--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   botton_nav_bar: ^1.0.2
   flutter_feather_icons: ^2.0.0+1
   flutter_svg: ^2.0.7
+  qr_code_scanner: ^1.0.1
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
