--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.0.7
   qr_code_scanner: ^1.0.1
   permission_handler: ^10.4.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
