--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,15 +1,19 @@
+workflows:
+  sample-workflow:
+    environment:
+      flutter: stable
 scripts:
   - name: Set up code signing settings on Xcode project
-    script: | 
+    script: |
       xcode-project use-profiles
   - name: Get Flutter packages
-    script: | 
+    script: |
       flutter packages pub get
   - name: Install pods
-    script: | 
+    script: |
       find . -name "Podfile" -execdir pod install \;
   - name: Flutter build ipa
-    script: | 
+    script: |
       flutter build ipa --release \
         --build-name=1.0.0 \
         --export-options-plist=/Users/builder/export_options.plist
